# data-workbench

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.agents/plugins/: marketplace.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/demo/: fred_home_price.csv  fred_rent_index.csv  shadow_inventory.csv
docs/: architecture.md  onboarding_wizard_quickstart.md  release_checklist_0_2_0.md  release_notes_0_2_0.md  shadow_inventory_dictionary.md  shipping_plan.md  shipping_tasks.md  workbench_v1_operator_guide.md
docs/agent_playbooks/: workbench-architect.md  workbench-builder.md  workbench-qa.md  workbench-scout.md
examples/onboarding_wizard_demo/: README.md
plugins/data-workbench/: README.md
runtime/coordination/: hybrid-reconciliation-manager.md  review-ux-manager.md  sql-orm-coverage.md
scripts/: bootstrap_venv.sh
specs/: workbench.graph.json
specs/structure/: spec.yaml
src/workbench/: __init__.py  agent_briefs.py  agent_contracts.py  api_helpers.py  (+41 more)
static/: index.html
tests/: __init__.py  api_test_case.py  test_api.py  test_api_contracts.py  test_api_execution.py  test_api_profile_inference.py  test_api_structure_bindings.py  test_bootstrap_venv_script.py  test_cli.py  test_e2e_browser.py  test_graph_engine.py  test_persistence_integration.py  test_regressions.py  test_release_docs.py  test_sql_orm_coverage.py  test_store_persistence.py  test_structure_hybrid.py  workbench_test_support.py
(+21 files in other folders)
